// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/viewHeader/viewHeader return viewHeader 1`] = `
<div>
  <div
    class="ViewHeader"
  >
    <div
      class="viewSelector"
    >
      <input
        class="Editable "
        placeholder="Untitled View"
        spellcheck="true"
        title="view title"
        value="view title"
      />
      <div>
        <div
          aria-label="View menu"
          class="MenuWrapper"
          role="button"
        >
          <button
            class="IconButton"
            type="button"
          >
            <i
              class="CompassIcon icon-chevron-down DropdownIcon"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="octo-spacer"
    />
    <div
      aria-label="Properties menu"
      class="MenuWrapper"
      role="button"
    >
      <button
        class="Button"
        type="button"
      >
        <span>
          Properties
        </span>
      </button>
    </div>
    <div
      aria-label="menuwrapper"
      class="MenuWrapper"
      role="button"
    >
      <button
        class="Button"
        type="button"
      >
        <span>
          Group by: 
          <span
            id="groupByLabel"
          >
            Status
          </span>
        </span>
      </button>
    </div>
    <div
      class="ModalWrapper"
    >
      <button
        class="Button active"
        type="button"
      >
        <span>
          Filter
        </span>
      </button>
    </div>
    <div
      aria-label="menuwrapper"
      class="MenuWrapper"
      role="button"
    >
      <button
        class="Button active"
        type="button"
      >
        <span>
          Sort
        </span>
      </button>
    </div>
    <div
      class="board-search-field"
    >
      <i
        class="CompassIcon icon-magnify board-search-icon"
      />
      <input
        class="Editable "
        placeholder="Search cards"
        value=""
      />
    </div>
    <div
      class="ModalWrapper"
    >
      <div
        aria-label="View header menu"
        class="MenuWrapper"
        role="button"
      >
        <button
          class="IconButton"
          type="button"
        >
          <i
            class="CompassIcon icon-dots-horizontal OptionsIcon"
          />
        </button>
      </div>
    </div>
    <div
      class="ButtonWithMenu"
    >
      <div
        class="button-text"
      >
        New
      </div>
      <div
        aria-label="menuwrapper"
        class="MenuWrapper"
        role="button"
      >
        <div
          class="button-dropdown"
        >
          <i
            class="CompassIcon icon-chevron-down DropdownIcon"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/viewHeader/viewHeader return viewHeader readonly 1`] = `
<div>
  <div
    class="ViewHeader"
  >
    <div
      class="viewSelector"
    >
      <input
        class="Editable readonly "
        placeholder="Untitled View"
        readonly=""
        spellcheck="true"
        title="view title"
        value="view title"
      />
    </div>
    <div
      class="octo-spacer"
    />
    <div
      class="board-search-field"
    >
      <i
        class="CompassIcon icon-magnify board-search-icon"
      />
      <input
        class="Editable "
        placeholder="Search cards"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`components/viewHeader/viewHeader return viewHeader without permissions 1`] = `
<div>
  <div
    class="ViewHeader"
  >
    <div
      class="viewSelector"
    >
      <input
        class="Editable readonly "
        placeholder="Untitled View"
        readonly=""
        spellcheck="true"
        title="view title"
        value="view title"
      />
      <div>
        <div
          aria-label="View menu"
          class="MenuWrapper"
          role="button"
        >
          <button
            class="IconButton"
            type="button"
          >
            <i
              class="CompassIcon icon-chevron-down DropdownIcon"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="octo-spacer"
    />
    <div
      class="board-search-field"
    >
      <i
        class="CompassIcon icon-magnify board-search-icon"
      />
      <input
        class="Editable "
        placeholder="Search cards"
        value=""
      />
    </div>
    <div
      class="ModalWrapper"
    >
      <div
        aria-label="View header menu"
        class="MenuWrapper"
        role="button"
      >
        <button
          class="IconButton"
          type="button"
        >
          <i
            class="CompassIcon icon-dots-horizontal OptionsIcon"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;
